--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
-@import "base";
-@import "layout";
-@import "components";
+@import "_reset";
+@import "_base";
+@import "_layout";
+@import "_components";
