--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -29,6 +29,15 @@
       outline: none;
       width: 100%;
     }
+
+    &::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-grey-dark-4);
+    }
+  }
+
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
   }
 
   &__button {
@@ -47,6 +56,7 @@
   &__icon {
     height: 2rem;
     width: 2rem;
+    fill: var(--color-grey-dark-3);
     
   }
 }
