--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,7 +1,7 @@
 // logo ===================================
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 // search ========================================
@@ -64,24 +64,53 @@
 // user nav =====================================
 
 .user-nav {
-  
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+
+  & > * {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    height: 100%;
+    padding: 0 2rem;
+  }
+
+  & > *:hover {
+    background-color: var(--color-grey-light-2);
+  }
 
   &__icon-box {
-
+    position: relative;
   }
 
   &__icon {
+    fill: var(--color-grey-dark-2);
     height: 2.25rem;
     width: 2.25rem;
   }
 
   &__notification {
+    align-items: center;
+    background-color: var(--color-primary);
+    border-radius: 50%;
+    color: #fff;
+    display: flex;
+    font-size: .8rem;
+    height: 1.75rem;
+    justify-content: center;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    width: 1.75rem;
 
   }
 
   &__user-photo {
-    height: 3.75rem;
+    height: 2.75rem;
     border-radius: 50%;
+    margin-bottom: 0;
+    margin-right: 1rem;
   }
 
   &__user-name {
