--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -113,7 +113,81 @@
     margin-right: 1rem;
   }
 
-  &__user-name {
+  // &__user-name {
 
+  // }
+}
+
+// Side nav =====================================================
+
+.side-nav {
+
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+  margin-left: 0;
+
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform .2s,
+                width .4s cubic-bezier(1,0,0,1) .2s,
+                background-color .1s;
   }
+
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: .5rem;
+    }
+  }
+
+  
+
+  &__link:link,
+  &__link:visited, {
+    align-items: center;
+    color: var(--color-grey-light-1);
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    z-index: 10;
+    display: flex;
+    
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;
+  }
+}
+
+// Legal text  ================================================
+.legal {
+  color: var(--color-grey-light-4);
+  font-size: 1.2rem;
+  padding: 2.5rem;
+  text-align: center;
+  
 }
