--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,7 +24,10 @@
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
+  display: flex;
+  flex-direction: column;
   flex: 0 0 18%;
+  justify-content: space-between;
 }
 
 .hotel-view {
