--- a/_pgbackup/css/style_1558496463.css
+++ b/_pgbackup/css/style_1558496463.css
@@ -751,7 +751,7 @@ pre tt:after {
     -ms-flex-align: center;
     align-items: center;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--color-grey-light-2);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1016,26 +1016,16 @@ pre tt:after {
 }
 
 .overview {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    border-bottom: 1px solid var(--color-grey-light-2);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
 }
 
-.overview__heading {
-    font-size: 2.25rem;
-    font-weight: 300;
-    letter-spacing: 1px;
-    margin-bottom: 0;
-    padding: 1.5rem 3rem;
-    text-transform: uppercase;
-}
-
 .overview__stars {
-    margin-right: auto;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    background-color: orangered;
 }
 
 .overview__icon-star,
@@ -1043,74 +1033,4 @@ pre tt:after {
     height: 1.75rem;
     fill: var(--color-primary);
     width: 1.75rem;
-}
-
-.btn-inline {
-    border: none;
-    color: var(--color-primary);
-    font-size: inherit;
-    border-bottom: 1px solid currentcolor;
-    padding-bottom: 2px;
-    display: inline-block;
-    background-color: transparent;
-    cursor: pointer;
-    -webkit-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
-}
-
-.btn-inline:hover {
-    color: blue;
-}
-
-.btn-inline:focus {
-    outline: none;
-    -webkit-animation: pulsate infinite;
-    animation: pulsate infinite;
-}
-
-@-webkit-keyframes pulsate {
-    0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-
-    50% {
-        -webkit-transform: scale(1.05);
-        transform: scale(1.05);
-        -webkit-box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
-        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-}
-
-@keyframes pulsate {
-    0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-
-    50% {
-        -webkit-transform: scale(1.05);
-        transform: scale(1.05);
-        -webkit-box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
-        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
 }
