--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -191,3 +191,105 @@
   text-align: center;
   
 }
+
+// Gallery =============================================
+
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
+
+// Heading ===========================================
+
+.overview {
+  align-items: center;
+  border-bottom: 1px solid var(--color-grey-light-2);
+  display: flex;
+  
+  
+
+  &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-bottom: 0;
+    padding: 1.5rem 3rem;
+    text-transform: uppercase;
+    
+  }
+
+  &__stars {
+    margin-right: auto;
+    
+  }
+
+  &__icon-star, 
+  &__icon-location {
+    height: 1.75rem;
+    fill: var(--color-primary);
+    width: 1.75rem;
+  }
+
+  &__location {
+    
+  }
+
+  &__rating {
+
+  }
+
+  &__rating-average {
+
+  }
+
+  &__rating-count {
+
+  }
+
+}
+
+// Button inline ====================================
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentcolor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s;
+
+  &:hover {
+    // color: var(--color-grey-dark-1);
+    color: blue;
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate infinite;
+  }
+
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+}
+
