--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -296,9 +296,17 @@
   cursor: pointer;
   transition: all .2s;
 
+  & span {
+    margin-left: 3px;
+    
+  }
   &:hover {
     color: var(--color-grey-dark-1);
     
+    span {
+      margin-left: 8px;
+      transition: margin-left .2s;
+    }
   }
 
   &:focus {
@@ -349,8 +357,8 @@
   &__item::before {
     content: "";
     display: inline-block;
-    height: 2rem;
-    width: 2rem;
+    height: 1rem;
+    width: 1rem;
     margin-right: .7rem;
     
     // older browsers
@@ -368,4 +376,100 @@
 
 }
 // Recommend =========================================
+
+.recommend {
+  align-items: center;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  font-size: 1.3rem;
+  
+  &__count {
+    color: var(--color-grey-dark-3);
+    margin-right: auto;
+  }
+
+  &__friends {
+    display: flex;
+  }
+
+  &__photo {
+    border-radius: 50%;
+    border: 3px solid white;
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+
+    &:not(:last-child) {
+      margin-right: -2.5rem;
+    }
+  }
+
+}
+
+// User-reviews ===============================
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-bottom: 3.5rem;
+  overflow: hidden;
+  padding: 3rem;
+  position: relative;
+
+    &::before {
+      content: "\201C";
+      position: absolute;
+      top: -2.75rem;
+      left: -1rem;
+      line-height: 1;
+      font-size: 20rem;
+      color: var(--color-grey-light-2);
+      font-family: sans-serif;
+      z-index: 1;
+    }
+
+    &__text {
+      margin-bottom: 2rem;
+      margin-left: 0;
+      position: relative;
+      z-index: 10;
+  }
+
+    &__user {
+      align-items: center;
+      display: flex;
+      margin: 0;
+      padding: 0;
+      -webkit-box-align: center;
+  }
+
+    &__photo {
+      border-radius: 50%;
+      height: 4.5rem;
+      margin-right: 1.5rem;
+      width: 4.5rem;
+  }
+
+    &__user-box {
+      margin-right: auto;
+  }
+
+    &__user-name {
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: .4rem;
+  }
+
+    &__user-date {
+      font-size: 1rem;
+      color: var(--color-grey-dark-3);
+  }
+
+    &__rating {
+      color:var(--color-primary);
+      font-size: 2.2rem;
+      font-weight: 300;
+  }
+}
 
