--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,11 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em; //1100px
+$bp-medium: 56.25em; //900px
+
+
 html {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -22,6 +27,10 @@ html {
   -webkit-text-size-adjust: 100%;
   font-size: 62.5%; /* 1rem = 10px/16px = 62.5%*/
   overflow-y: scroll;
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 * {
