--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -127,6 +127,11 @@
   margin-top: 3.5rem;
   margin-left: 0;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item::before {
     content: "";
     position: absolute;
@@ -156,10 +161,16 @@
 
     &:not(:last-child) {
       margin-bottom: .5rem;
+
+       @media only screen and (max-width: $bp-medium) {
+         margin-bottom: 0;
+       }
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
   }
-
-  
 
   &__link:link,
   &__link:visited, {
@@ -172,7 +183,11 @@
     text-transform: uppercase;
     z-index: 10;
     display: flex;
-    
+
+     @media only screen and (max-width: $bp-medium) {
+       justify-content: center;
+       padding: 2rem;
+     }
   }
 
   &__icon {
@@ -189,7 +204,11 @@
   font-size: 1.2rem;
   padding: 2.5rem;
   text-align: center;
-  
+
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
+
 }
 
 // Gallery =============================================
@@ -360,7 +379,7 @@
     height: 1rem;
     width: 1rem;
     margin-right: .7rem;
-    
+
     // older browsers
     // background-image: url(../img/chevron-thin-right.svg);
     // background-size: cover;
@@ -400,7 +419,7 @@
     width: 4rem;
 
     &:not(:last-child) {
-      margin-right: -2.5rem;
+      margin-right: -2rem;
     }
   }
 
@@ -415,6 +434,11 @@
   overflow: hidden;
   padding: 3rem;
   position: relative;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
     &::before {
       content: "\201C";
@@ -473,3 +497,77 @@
   }
 }
 
+// cta ========================================
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2.5rem;
+    text-transform: uppercase;
+    
+  }
+}
+
+// button  ====================================
+
+.btn {
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(to right,
+  var(--color-primary-light),
+  var(--color-primary-dark));
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 300;
+  overflow: hidden;
+  position: relative;
+  text-transform: uppercase;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    transition: all .5s;
+    width: 100%;
+  }
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+
+  &__invisible {
+    left: 0;
+    position: absolute;
+    padding: 2rem;
+    top: -100%;
+  }
+
+  &:hover {
+    background-image: linear-gradient(to left,
+    var(--color-primary-light),
+    var(--color-primary-dark));
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+    transition: all .5s;
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+
+}
