--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,6 +5,12 @@
   box-shadow: var(--shadow-dark);
   
   min-height: 50rem;
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
@@ -20,6 +26,14 @@
 
 .content {
   display: flex;
+
+  
+    @media only screen and (max-width: $bp-medium) {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -41,6 +55,10 @@
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
   font-size: 1.4rem;
+
+   @media only screen and (max-width: $bp-medium) {
+     padding: 3rem;
+   }
 }
 
 .description {
@@ -49,6 +67,11 @@
   flex: 0 0 60%;
   margin-right: 4.5rem;
   padding: 3rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-right: 4.5rem;
+  }
 }
 
 .user-reviews {
