--- a/_pgbackup/css/style_1559097159.css
+++ b/_pgbackup/css/style_1559097159.css
@@ -739,6 +739,12 @@ pre tt:after {
     content: "";
 }
 
+@media only screen and (max-width: 480px) {
+    html {
+        font-size: 100%;
+    }
+}
+
 .container {
     max-width: 120rem;
     margin: 8rem auto;
@@ -770,16 +776,6 @@ pre tt:after {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-}
-
-@media only screen and (max-width: 31.25em) {
-    .header {
-        -ms-flex-line-pack: distribute;
-        align-content: space-around;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        height: 11rem;
-    }
 }
 
 .content {
@@ -864,12 +860,6 @@ pre tt:after {
     }
 }
 
-@media only screen and (max-width: 37.5em) {
-    .description {
-        margin: 0 0 2.5rem 0;
-    }
-}
-
 .user-reviews {
     -ms-flex-align: center;
     align-items: center;
@@ -904,18 +894,6 @@ pre tt:after {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-}
-
-@media only screen and (max-width: 31.25em) {
-    .search {
-        background-color: var(--color-grey-light-2);
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-        order: 1;
-    }
 }
 
 .search__input {
@@ -1129,30 +1107,11 @@ pre tt:after {
     }
 }
 
-@media only screen and (max-width: 37.5em) {
-    .side-nav__link:link,
-    .side-nav__link:visited {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        padding: 1.5rem .5rem;
-    }
-}
-
 .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
-}
-
-@media only screen and (max-width: 37.5em) {
-    .side-nav__icon {
-        margin: 0 0 .7rem 0;
-        width: 1.5rem;
-        height: 1.5rem;
-    }
 }
 
 .legal {
@@ -1207,13 +1166,6 @@ pre tt:after {
     text-transform: uppercase;
 }
 
-@media only screen and (max-width: 37.5em) {
-    .overview__heading {
-        font-size: 1.8rem;
-        padding: 1.25rem 2rem;
-    }
-}
-
 .overview__stars {
     margin-right: auto;
 }
@@ -1263,22 +1215,10 @@ pre tt:after {
     padding: 0 2.25rem;
 }
 
-@media only screen and (max-width: 37.5em) {
-    .overview__rating {
-        padding: 0 1.5rem;
-    }
-}
-
 .overview__rating-average {
     font-size: 2.25rem;
     font-weight: normal;
     margin-bottom: -5px;
-}
-
-@media only screen and (max-width: 37.5em) {
-    .overview__rating-average {
-        font-size: 1.8rem;
-    }
 }
 
 .overview__rating-count {
@@ -1286,12 +1226,6 @@ pre tt:after {
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
-}
-
-@media only screen and (max-width: 37.5em) {
-    .overview__rating-count {
-        font-size: .5rem;
-    }
 }
 
 .btn-inline {
@@ -1405,18 +1339,11 @@ pre tt:after {
     height: 1rem;
     width: 1rem;
     margin-right: .7rem;
-    background-image: url(../img/chevron-thin-right.svg);
-    background-size: cover;
-}
-
-@supports ((-webkit-mask-image: url()) or (mask-image: url())) {
-    .list__item::before {
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size: cover;
-    }
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;
 }
 
 .recommend {
