--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,8 @@
 $bp-largest: 75em; //1200px
 $bp-large: 68.75em; //1100px
 $bp-medium: 56.25em; //900px
+$bp-small: 37.5em; //600px
+$bp-xsmall: 31.25em; //500px
 
 
 html {
@@ -736,8 +738,8 @@ pre tt:after {
   content: "";
 }
 
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
-  }
-}
+// @media only screen and (max-width: 480px) {
+//   html {
+//     font-size: 100%;
+//   }
+// }
