--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -21,6 +21,12 @@
   font-size: 1.4rem;
   height: 7rem;
   justify-content: space-between;
+
+  @media only screen and (max-width: $bp-xsmall) {
+    align-content: space-around;
+    flex-wrap: wrap;
+    height: 11rem;
+  }
   
 }
 
@@ -59,6 +65,14 @@
    @media only screen and (max-width: $bp-medium) {
      padding: 3rem;
    }
+
+   @media only screen and (max-width: $bp-small) {
+    // -webkit-box-orient: vertical;
+    // -webkit-box-direction: normal;
+    // -ms-flex-direction: column;
+    flex-direction: column;
+    
+   }
 }
 
 .description {
@@ -72,6 +86,12 @@
     padding: 2rem;
     margin-right: 4.5rem;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 0 0 2.5rem 0; 
+  }
+
+ 
 }
 
 .user-reviews {
